[tool.poetry]
name = "goapy"
version = "0.1.0"
description = ""
authors = ["Matthew McGrath <matthew.mcgrath12@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
transitions = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"